--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
