--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # REACT_APP_END_POINT = "http://localhost:4000"
-REACT_APP_END_POINT = "https://tran-thuy-trang.onrender.com/"
+REACT_APP_END_POINT = "https://tran-thuy-trang.onrender.com"
